# miniature-parakeet

./: Cargo.toml  Dockerfile  README.md  cronjob.yml  deployment.yml  docker-compose.yml  ingress.yml  kustomization.yml  service.yml
prometheus/: prometheus.yml
script/: build.sh  push.sh
src/: main.rs
