[package]
name = "miniature-parakeet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
crossbeam-channel = "0.5.2"
log = "0.4.14"
metrics = "0.18.0"
metrics-exporter-prometheus = "0.8.0"
pretty_env_logger = "0.4.0"
tokio = {version="1.17.0", features=["macros", "rt-multi-thread"]}
